--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -49,7 +49,7 @@
                         }
                         else
                         {
-                            <STextField HideDetails="true" Dense Outlined @bind-Value="@_bizDetail.Name"></STextField>
+                            <STextField Rules="BizNameRules" Dense Outlined @bind-Value="@_bizDetail.Name"></STextField>
                         }
                     </div>
                     <div class="mx-4" style="color:#E2E7F4">|</div>
@@ -71,12 +71,18 @@
                 </MCardSubtitle>
                 <MCardActions Class="pb-2 d-flex">
                     <div style="overflow:hidden; height:64px; margin:0 16px 0 0;">
-                        @{
-                            foreach (var item in _projectEnvClusters)
+                        <MChipGroup Class="env-cluster-chip-group" ActiveClass="primary--text">
+                            @foreach (var item in _projectEnvClusters)
                             {
-                                <EnvClusterChip Class="mb-3" Style="margin:0 6px;" EnvironmentName="@item.EnvironmentName" EnvironmentColor="@item.EnvironmentColor" ClusterName="@item.ClusterName" />
+                                <EnvClusterChip Class="mb-3"
+                                            OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(_bizDetail.Id, ProjectId,item.Id, ConfigObjectType.Biz))"
+                                            Style="margin:0 6px;"
+                                            EnvironmentName="@item.EnvironmentName"
+                                            EnvironmentColor="@item.EnvironmentColor"
+                                            ClusterName="@item.ClusterName">
+                                </EnvClusterChip>
                             }
-                        }
+                        </MChipGroup>
                     </div>
                     <MSpacer></MSpacer>
                     <MMenu Transition="slide-y-transition" Bottom>
@@ -120,30 +126,17 @@
                         foreach (var app in _apps)
                         {
                             <MCol Lg="4" Md="6" Sm="12">
-                                <AppCard Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
-                                    <MMenu Transition="slide-y-transition" Bottom>
-                                        <ActivatorContent>
-                                            <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
-                                                <MIcon Color="black">mdi-dots-horizontal</MIcon>
-                                            </MButton>
-                                        </ActivatorContent>
-
-                                        <ChildContent>
-                                            <MList Dense>
-                                                @foreach (var item in app.EnvironmentClusters)
-                                                {
-                                                    <MListItem OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, ProjectId, item.Id, ConfigObjectType.App))">
-                                                        <MListItemContent>
-                                                            <MListItemTitle>
-                                                                <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
-                                                                <span>@item.ClusterName</span>
-                                                            </MListItemTitle>
-                                                        </MListItemContent>
-                                                    </MListItem>
-                                                }
-                                            </MList>
-                                        </ChildContent>
-                                    </MMenu>
+                                <AppCard OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, app.ProjectId, app.EnvironmentClusters[0].Id, ConfigObjectType.App))" Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                    <MChipGroup Class="env-cluster-chip-group" ActiveClass="primary--text">
+                                        @foreach (var item in app.EnvironmentClusters)
+                                        {
+                                            <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, ProjectId, item.Id, ConfigObjectType.App))"
+                                                Style="margin:0 12px 1px 0;"
+                                                EnvironmentName="@item.EnvironmentName"
+                                                EnvironmentColor="@item.EnvironmentColor"
+                                                ClusterName="@item.ClusterName" />
+                                        }
+                                    </MChipGroup>
                                 </AppCard>
                             </MCol>
                         }
