--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -98,9 +98,9 @@
     </MNavigationDrawer>
 
     <div class="pl-6" style="width: calc(100% - 300px); display:block;">
-        <div class="rounded-5 pa-6" style="background:#fff;overflow: hidden;">
-            <div class="d-flex mb-6">
-                <MTextField @bind-Value="_configObjectName" OnKeyDown="SearchConfigObjectAsync" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-background" HideDetails="@("auto")" Placeholder="@T("Please enter the config name and press enter to query")">
+        <div style="overflow: hidden;">
+            <div class="d-flex mb-3">
+                <MTextField @bind-Value="_configObjectName" OnKeyDown="SearchConfigObjectAsync" Class="rounded-2" Height="40" Flat Dense Solo HideDetails="@("auto")" Placeholder="@T("Please enter the config name and press enter to query")">
                     <PrependInnerContent>
                         <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
                     </PrependInnerContent>
@@ -109,15 +109,15 @@
                     <MIcon Small>mdi-plus </MIcon>@T("Add")
                 </MButton>
             </div>
-            <div style="margin:0 -24px; overflow:auto; @ConfigPanelStyle">
+            <div class="mt-3" style="overflow:auto; @ConfigPanelStyle">
                 <MExpansionPanels @bind-Values="_selectPanels" Flat Accordion>
                     @foreach (var configObject in _configObjects)
                     {
                         var formatLabelCode = configObject.FormatLabelCode.Trim().ToLower();
                         if (formatLabelCode == "json")
                         {
-                            <MExpansionPanel Value="configObject.Id">
-                                <MExpansionPanelHeader Context="_">
+                            <MExpansionPanel Value="configObject.Id" Class="rounded-5 my-3">
+                                <MExpansionPanelHeader Context="_" Style="height: 56px;" Class="my-6">
                                     <ChildContent>
                                         <div class="emphasis--text h6 d-flex align-center">
                                             @if (configObject.FromRelation)
@@ -134,9 +134,22 @@
                                                     </div>
                                                 }
                                             }
-                                            <span>@configObject.Name</span>
-                                            <span class="ml-3 regular3--text btn">|</span>
-                                            <sapn class="ml-2 regular3--text btn">@configObject.FormatName</sapn>
+                                            <MHover Context="hContext">
+                                                <div @attributes=hContext.Attrs class="hover-pointer d-flex align-center">
+                                                    <span class="mr-2">@configObject.Name</span>
+                                                    <div @onclick="()=>Copy(configObject.Name)" @onclick:stopPropagation>
+                                                        <SIcon Tooltip="@T("Copy name")"
+                                                            Color="@(_configNameCopyClicked ? "success" : "gray")"
+                                                            Style="@(hContext.Hover ? "width: 18px; height: 18px; margin-right: 12px; transition: 0.5s;" : "opacity:0; width: 18px; height: 0px; margin-left: -24px; transition: 0.4s;")">
+                                                            @(_configNameCopyClicked ? _checkSvg : _copySvg)
+                                                        </SIcon>
+                                                    </div>
+                                                </div>
+                                            </MHover>
+                                            <div class="regular3--text btn d-flex">
+                                                <span>|</span>
+                                                <sapn class="ml-2">@configObject.FormatName</sapn>
+                                            </div>
                                             <MSpacer></MSpacer>
                                             <MButton StopPropagation Icon Class="mr-4" OnClick="()=> UpdateJsonConfigAsync(configObject)">
                                                 @if (!configObject.IsEditing)
@@ -226,13 +239,12 @@
                                     }
                                     <JsonEditor Disabled="!configObject.IsEditing" @bind-Value="@configObject.Content"></JsonEditor>
                                 </MExpansionPanelContent>
-                                <hr class="mx-6" style="background: none repeat scroll 0 0 #E9EDF7; border: thin none; height: 1px;" />
                             </MExpansionPanel>
                         }
                         else if (formatLabelCode == "properties")
                         {
-                            <MExpansionPanel Value="configObject.Id">
-                                <MExpansionPanelHeader Context="_">
+                            <MExpansionPanel Value="configObject.Id" Class="rounded-5 my-3">
+                                <MExpansionPanelHeader Context="_" Style="height: 56px;" Class="my-6">
                                     <ChildContent>
                                         <div class="emphasis--text h6 d-flex align-center">
                                             @if (configObject.FromRelation)
@@ -245,9 +257,22 @@
                                                     @T("Modified")
                                                 </div>
                                             }
-                                            <span>@configObject.Name</span>
-                                            <span class="ml-3 regular3--text btn">|</span>
-                                            <sapn class="ml-2 regular3--text btn">@configObject.FormatLabelCode</sapn>
+                                            <MHover Context="hContext">
+                                                <div @attributes=hContext.Attrs class="hover-pointer d-flex align-center">
+                                                    <span class="mr-2">@configObject.Name</span>
+                                                    <div @onclick="()=>Copy(configObject.Name)" @onclick:stopPropagation>
+                                                        <SIcon Tooltip="@T("Copy name")"
+                                                            Color="@(_configNameCopyClicked ? "success" : "gray")"
+                                                            Style="@(hContext.Hover ? "width: 18px; height: 18px; margin-right: 12px; transition: 0.5s;" : "opacity:0; width: 18px; height: 0px; margin-left: -24px; transition: 0.4s;")">
+                                                            @(_configNameCopyClicked ? _checkSvg : _copySvg)
+                                                        </SIcon>
+                                                    </div>
+                                                </div>
+                                            </MHover>
+                                            <div class="regular3--text btn d-flex">
+                                                <span>|</span>
+                                                <sapn class="ml-2">@configObject.FormatName</sapn>
+                                            </div>
                                             <MSpacer></MSpacer>
                                             @if (!configObject.FromRelation)
                                             {
@@ -445,8 +470,8 @@
                         }
                         else
                         {
-                            <MExpansionPanel Value="configObject.Id">
-                                <MExpansionPanelHeader Context="_">
+                            <MExpansionPanel Value="configObject.Id" Class="rounded-5 my-3">
+                                <MExpansionPanelHeader Context="_" Style="height: 56px;" Class="my-6">
                                     <ChildContent>
                                         <div class="emphasis--text h6 d-flex align-center">
                                             @if (configObject.FromRelation)
@@ -463,9 +488,22 @@
                                                     </div>
                                                 }
                                             }
-                                            <span>@configObject.Name</span>
-                                            <span class="ml-3 regular3--text btn">|</span>
-                                            <sapn class="ml-2 regular3--text btn">@configObject.FormatName</sapn>
+                                            <MHover Context="hContext">
+                                                <div @attributes=hContext.Attrs class="hover-pointer d-flex align-center">
+                                                    <span class="mr-2">@configObject.Name</span>
+                                                    <div @onclick="()=>Copy(configObject.Name)" @onclick:stopPropagation>
+                                                        <SIcon Tooltip="@T("Copy name")"
+                                                            Color="@(_configNameCopyClicked ? "success" : "gray")"
+                                                            Style="@(hContext.Hover ? "width: 18px; height: 18px; margin-right: 12px; transition: 0.5s;" : "opacity:0; width: 18px; height: 0px; margin-left: -24px; transition: 0.4s;")">
+                                                            @(_configNameCopyClicked ? _checkSvg : _copySvg)
+                                                        </SIcon>
+                                                    </div>
+                                                </div>
+                                            </MHover>
+                                            <div class="regular3--text btn d-flex">
+                                                <span>|</span>
+                                                <sapn class="ml-2">@configObject.FormatName</sapn>
+                                            </div>
                                             <MSpacer></MSpacer>
                                             <MButton StopPropagation Icon Class="mr-4" OnClick="()=> UpdateOtherConfigObjectContentAsync(configObject)">
                                                 @if (!configObject.IsEditing)
@@ -480,9 +518,9 @@
                                             </MButton>
                                             @if (ConfigObjectType == ConfigObjectType.App && configObject.FromRelation == false)
                                             {
-                                                <MButton Disabled="configObject.IsEditing" StopPropagation Icon Class="mr-4" OnClick="()=>ShowCloneModalAsync(configObject)"><SIcon Tooltip="@("Clone")" Size="20" Color="#323D6F">fas fa-copy</SIcon></MButton>
+                                                <MButton Disabled="configObject.IsEditing" StopPropagation Icon Class="mr-4" OnClick="()=>ShowCloneModalAsync(configObject)"><SIcon Tooltip="@T("Clone")" Size="20" Color="#323D6F">fas fa-copy</SIcon></MButton>
                                             }
-                                            <MButton Disabled="configObject.IsEditing" StopPropagation Icon Class="mr-4" OnClick="()=>ShowReleaseModalAsync(configObject)"><SIcon Tooltip="@("Publish")" Color="#323D6F">mdi-send</SIcon></MButton>
+                                            <MButton Disabled="configObject.IsEditing" StopPropagation Icon Class="mr-4" OnClick="()=>ShowReleaseModalAsync(configObject)"><SIcon Tooltip="@T("Publish")" Color="#323D6F">mdi-send</SIcon></MButton>
                                             <MMenu OffsetY>
                                                 <ActivatorContent>
                                                     <MButton Disabled="configObject.IsEditing" @attributes="@context.Attrs" StopPropagation Icon Class="mr-4">
@@ -602,7 +640,7 @@
                     <STextField Class="mt-12" Label="@T("Release name")" Outlined @bind-Value="_configObjectReleaseModal.Data.Name"></STextField>
                     <MTextarea Class="mt-6" Dense Label="@T("Description")" Outlined @bind-Value="_configObjectReleaseModal.Data.Comment"></MTextarea>
                     <p class="neutral--text" style="font-size:14px; font-weight:700;">@T("Changed configuration")</p>
-                @if (_selectConfigObject.FormatLabelCode.ToLower() == "properties")
+                    @if (_selectConfigObject.FormatLabelCode.ToLower() == "properties")
                 {
                     <div style="border-radius:8px; border:1px solid #E2E7F4;" class="py-3 mt-4">
                         <MDataTable Headers="ReleaseHeaders"
