--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
@@ -82,21 +82,23 @@
                             </MTabs>
                         </MCard>
                     </MRow>
-                    <div class="rounded-5 mt-6 py-2" style="height:calc(100vh - 304px );background:#fff;display:flex; flex-direction:column; justify-content:space-between; overflow:auto;">
+                    <div class="rounded-5 mt-3" style="height:calc(100vh - 292px ); display:flex; flex-direction:column; justify-content:space-between; overflow:auto;">
                         <div>
                             <MExpansionPanels Flat Accordion>
                                 @foreach (var project in _projects)
                                 {
                                     var apps = _apps.Where(app => app.ProjectId == project.Id && app.EnvironmentClusters.Select(envCluster => envCluster.Id).Contains(_selectEnvClusterId.AsT1)).ToList();
-                                    <MExpansionPanel Class="rounded-5">
-                                        <MExpansionPanelHeader>
+                                    <MExpansionPanel Class="rounded-5 my-3">
+                                        <MExpansionPanelHeader Style="height: 56px;" Class="my-6">
                                             <ChildContent>
-                                                <span style="display:flex;align-items:center;margin-right:10px;">
-                                                    <div class="emphasis--text h6" @onclick:stopPropagation @onclick="()=>NavigateToAppAsync(project.Id)">
-                                                        @project.Name
-                                                        <span class="ml-2 regular3--text btn">|</span>
-                                                        <sapn class="ml-1 regular3--text btn">@T("AppCount"):@apps.Count</sapn>
-                                                        <div class="regular3--text btn d-flex" style="padding:0">
+                                                <span style="display:flex;align-items:center; margin-right:10px;">
+                                                    <div class="emphasis--text h6">
+                                                        <MHover Context="hoverContext">
+                                                            <span @onclick:stopPropagation @onclick="()=>NavigateToAppAsync(project.Id)" @attributes="hoverContext.Attrs" class="@(hoverContext.Hover ? "primary--text":"")">
+                                                                @project.Name
+                                                            </span>
+                                                        </MHover>
+                                                        <div class="mt-1 regul ar3--text body2 d-flex" style="padding:0">
                                                             @{
                                                                 string backgroundColor;
                                                                 switch (project.LabelCode.ToLower())
@@ -118,7 +120,9 @@
                                                             <div class="d-flex justify-center mr-2" style="border-radius:6px; color:#fff; background-color:@backgroundColor; padding:0 4px;">
                                                                 @project.LabelName
                                                             </div>
-                                                            @project.Identity
+                                                            <span class="regular3--text body2">@project.Identity</span>
+                                                            <span class="ml-2 regular3--text body2">|</span>
+                                                            <sapn class="ml-2 regular3--text body2">@T("AppCount"):@apps.Count</sapn>
                                                         </div>
                                                     </div>
                                                 </span>
@@ -131,47 +135,52 @@
                                         </MExpansionPanelHeader>
                                         <MExpansionPanelContent>
                                             <MRow>
-                                                @foreach (var app in apps.Where(app => app.IsPinned).Take(3))
+                                                @foreach (var app in apps.OrderByDescending(app => app.IsPinned).ThenByDescending(app => app.ModificationTime).Take(6))
                                                 {
                                                     @if (app.ProjectId == project.Id)
                                                     {
                                                         <MCol Lg="4" Md="6" Sm="12">
                                                             <AppCard OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, app.ProjectId, app.EnvironmentClusters[0].Id, ConfigObjectType.App))" OnPinClick="()=>AppPin(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
-                                                                <MMenu Transition="slide-y-transition" Bottom>
-                                                                    <ActivatorContent>
-                                                                        <MButton StopPropagation @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
-                                                                            <MIcon Color="black">mdi-dots-horizontal</MIcon>
-                                                                        </MButton>
-                                                                    </ActivatorContent>
-
-                                                                    <ChildContent>
-                                                                        <MList Dense>
-                                                                            @foreach (var item in app.EnvironmentClusters)
-                                                                            {
-                                                                                <MListItem OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, app.ProjectId, item.Id, ConfigObjectType.App))">
-                                                                                    <MListItemContent>
-                                                                                        <MListItemTitle>
-                                                                                            <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
-                                                                                            <span>@item.ClusterName</span>
-                                                                                        </MListItemTitle>
-                                                                                    </MListItemContent>
-                                                                                </MListItem>
-                                                                            }
-                                                                        </MList>
-                                                                    </ChildContent>
-                                                                </MMenu>
+                                                                <MChipGroup Class="env-cluster-chip-group" ActiveClass="primary--text">
+                                                                    @foreach (var item in app.EnvironmentClusters)
+                                                                    {
+                                                                        <EnvClusterChip OnClick="()=>NavigateToConfigAsync(new NavigateToConfigModel(app.Id, app.ProjectId, item.Id, ConfigObjectType.App))"
+                                                                        Style="margin:0 12px 1px 0;"
+                                                                        EnvironmentName="@item.EnvironmentName"
+                                                                        EnvironmentColor="@item.EnvironmentColor"
+                                                                        ClusterName="@item.ClusterName" />
+                                                                    }
+                                                                </MChipGroup>
                                                             </AppCard>
                                                         </MCol>
                                                     }
                                                 }
                                             </MRow>
-                                            <div class="d-flex justify-start mt-3">
-                                                <div>
-                                                    <img style="height:24px;width:24px" src="/img/avatar/9.svg">
-                                                </div>
+                                            <div class="d-flex justify-space-between align-flex-end mt-3 mb-2">
+                                                @{
+                                                    var team = _allTeams.FirstOrDefault() ?? new();
+                                                    <MTooltip Right>
+                                                        <ActivatorContent>
+                                                            <MAvatar Size="24" @attributes="@context.Attrs">
+                                                                <MImage Src="@team.Avatar"></MImage>
+                                                            </MAvatar>
+                                                        </ActivatorContent>
+                                                        <ChildContent>
+                                                            <span>@team.Name</span>
+                                                        </ChildContent>
+                                                    </MTooltip>
+                                                }
+                                                <MHover>
+                                                    @{
+                                                        var mClass = $"{(context.Hover ? "primary--text" : "regular2--text")}";
+                                                        <div @onclick="()=>NavigateToAppAsync(project.Id)" @attributes="context.Attrs" class="@($"hover-pointer btn {mClass}")">
+                                                            @T("More")
+                                                            <MIcon Class="@($"ml-1 {mClass}")" Size="18">mdi-chevron-right</MIcon>
+                                                        </div>
+                                                    }
+                                                </MHover>
                                             </div>
                                         </MExpansionPanelContent>
-                                        <hr class="mx-6" style="background: none repeat scroll 0 0 #E9EDF7; border: thin none; height: 1px;" />
                                     </MExpansionPanel>
                                 }
                             </MExpansionPanels>
