--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -7,7 +7,7 @@
 @using Masa.Dcc.Web.Admin.Rcl.Shared
 @using Masa.Dcc.Web.Admin.Rcl.Data.Base
 @using Masa.Dcc.Web.Admin.Rcl.Components
-@using Masa.BuildingBlocks.BasicAbility.Pm.Model
+@using Masa.BuildingBlocks.StackSdks.Pm.Model
 @using Masa.Stack.Components
 @using Masa.Dcc.Web.Admin.Rcl.Pages.Modal;
 @using Humanizer
