--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/App.razor
@@ -9,7 +9,7 @@
         </Found>
         <NotFound>
             <MApp>
-                <Masa.Stack.Components.Sessions.NotFound />
+                <NotFound />
             </MApp>
         </NotFound>
     </Router>
